--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^16.5.2",
-    "inert": "^4.2.1"
+    "hapi-auth-jwt": "^4.0.0",
+    "inert": "^4.2.1",
+    "jsonwebtoken": "^8.1.0",
+    "knex": "^0.13.0",
+    "mysql": "^2.15.0"
   }
 }
