--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "hapi": "^16.5.2",
+    "hapi-auth-basic": "^4.2.0",
     "hapi-auth-jwt": "^4.0.0",
     "inert": "^4.2.1",
     "jsonwebtoken": "^8.1.0",
